Added bold back to Facet blog post. Since it was removed from CSS.

--- a/_posts/2018-04-18-facets.md
+++ b/_posts/2018-04-18-facets.md
@@ -20,7 +20,7 @@ Search is great. It gives you the power to find information without having to go
 A facet is usually designed as a box containing check boxes or links allowing users to narrow search results by several dimensions. Facets are useful for large content sets because they provide multiple filters, one for every specific aspect of the content. Additionally, faceted navigation helps the user get an overview of the content available, making them understand how to search for it<sup>1</sup>.
 
 ![bestbuy](/images/2018-04-18-facets/bestbuy.png)
-> All the filters on the left side of the screen on Bestbuy.ca are facets.
+> **All the filters on the left side of the screen on Bestbuy.ca are facets.**
 
 
 # Position of the Facets
@@ -38,13 +38,13 @@ Let me give you an example. If a customer on the B&H website is looking for a pr
 
  
 ![bh](/images/2018-04-18-facets/bh.png)
-> The user first did a search for “Projector” and then selected the “Home Theater Projectors” category to narrow the results to what they were looking for. 
+> **The user first did a search for “Projector” and then selected the “Home Theater Projectors” category to narrow the results to what they were looking for.**
  
  Usually, the component used for a drill-down selection is a link because it usually indicates a straightforward equals condition, for example “I want to narrow my search results to Department equals Home projectors”. Sometimes, this type of filter can be designed as horizontal tabs if you don’t need to display multiple levels in a hierarchy. However, if you have to display a hierarchy, a facet with multi-level category links is better.
 
 
 ![amazon](/images/2018-04-18-facets/amazon.png)
-> Because there are multiple levels in a hierarchy to show, Amazon.ca uses links in a facet to narrow search results one step at the time. The facets below it will adapt depending on the category selected. 
+> **Because there are multiple levels in a hierarchy to show, Amazon.ca uses links in a facet to narrow search results one step at the time. The facets below it will adapt depending on the category selected.** 
 
 For parallel selection or batch filtering, check boxes are better because they enable users to limit the scope of search results to those matching the criteria selected. Check boxes indicate an additive “or” condition, for example: “I want to narrow my search result to: Brand equals Philips, LG, or Sony”. 
  
