Add @klalumiere as a contributor to this post https://coveord.atlassian.net/browse/top-10

--- a/_posts/2020-01-13-videolunch-top-10-2019.md
+++ b/_posts/2020-01-13-videolunch-top-10-2019.md
@@ -5,10 +5,10 @@ title: "Coveo #VideoLunch 2019"
 tags: [videolunch, top10]
 
 author:
-  name: Andy Emond
-  bio: Machine Learning Platform Developer
+  name: Andy Emond & Kevin Lalumière
+  bio: Machine Learning Platform Developer & Software Developer Indexing Infrastructure
   twitter: Drahakar
-  image: aemond.jpg
+  image: aemond_klalumiere.jpg
 ---
 
 Since 2016, we have taken the habit of gathering every two weeks to eat lunch and watch an interesting conference that was recorded and made available online. The conference doesn’t have to be recent (we’ve watched stuff that was from 10 years ago in 260p and it hurted my fragile millennial eyes as hell, but the content was well worth it). As usual, because I am always late to all the _cool_ online trends, here is our late top 10 conferences we’ve watched this year accompanied with some comments from my colleague @klalumiere.
