Apply corrections from Alexandre Moreau and Devin Lafrenière https://coveord.atlassian.net/browse/top-10

--- a/_posts/2020-01-13-videolunch-top-10-2019.md
+++ b/_posts/2020-01-13-videolunch-top-10-2019.md
@@ -11,7 +11,7 @@ author:
   image: aemond_klalumiere.jpg
 ---
 
-Since 2016, we have taken the habit of gathering every two weeks to eat lunch and watch an interesting conference that was recorded and made available online. The conference doesn’t have to be recent (we’ve watched stuff that was from 10 years ago in 260p and it hurted my fragile millennial eyes as hell, but the content was well worth it). As usual, because I am always late to all the _cool_ online trends, here is our late top 10 conferences we’ve watched this year accompanied with some comments from my colleague @klalumiere.
+Since 2016, we have taken the habit of gathering every two weeks to eat lunch and watch an interesting conference that was recorded and made available online. The conference doesn’t have to be recent (we’ve watched stuff from 10 years ago in 260p and it hurt my fragile millennial eyes as hell, but the content was well worth it). As usual, because I am always late to all the _cool_ online trends, here is our late top 10 conferences we’ve watched this year accompanied with some comments from my colleague @klalumiere.
 
 <!-- more -->
 
@@ -19,31 +19,31 @@ Since 2016, we have taken the habit of gathering every two weeks to eat lunch an
 
 [The Road to Chaos](https://www.youtube.com/watch?v=FCZVAZaXIjs)
 
-Great talk from Nora Jones on the topic of Chaos Engineering as a resilience technique but also covers some often overlooked aspects of it, like cultural acceptance, the impact it has, and how to correctly set this practice in place without looking like the chaotic evil character from your last D&D campaign.
+Great talk from Nora Jones on the topic of Chaos Engineering as a resilience technique. What's interesting is that is also covers some often overlooked aspects of it, like cultural acceptance, the impact it has, and how to correctly set this practice in place without looking like the chaotic evil character from your last D&D campaign.
 
 From @klalumiere
-> The talk was honest, funny and easy to understand. It gave important insights about how to introduce new practices in teams so that these new practices are not rejected.
+> The talk was honest, funny, and easy to understand. It gave important insights about how to introduce new practices in teams so that these new practices are not rejected.
 
 ### 9. If You Don’t Know Where You’re Going, It Doesn’t Matter How Fast You Get There - Jez Humble & Nicole Forsgren - 2018
 
 [If You Don’t Know Where You’re Going, It Doesn’t Matter How Fast You Get There](https://www.infoq.com/presentations/outcome-project-management)
 
-Jez Humble and Dr. Nicole Forsgren talks about the impact of Continuous Delivery and how elite teams are able to differentiate themselves from low performing teams.
+Jez Humble and Dr. Nicole Forsgren talk about the impact of Continuous Delivery and how elite teams are able to differentiate themselves from low performing teams.
 
 ### 8. 5 Lessons Learned From Writing Over 300,000 Lines of Infrastructure Code - Yevgeniy Brikman - 2018
 
  [5 Lessons Learned From Writing Over 300,000 Lines of Infrastructure Code](https://www.youtube.com/watch?v=RTEgE2lcyk4)
 
-Infrastructure as Code (IaC) is something well integrated here at Coveo and, over time, we’ve developed some leading practices and some bad practices. It was really nice to confront what we’ve learned to what others have experienced on such a huge scale.
+Infrastructure as Code (IaC) is something well integrated here at Coveo and, over time, we’ve developed some leading practices and some bad practices. It was really nice to compare what we’ve learned to what others have experienced on such a huge scale.
 
 @klalumiere also adds
-> One thing I've seen happening again and again is the trend "this is not code, not really". I've seen this happen (and still see it happens) when talking about automated tests, about continuous integration code, Dockerfile, bash script and of course in infrastructure code. This very important talk enumerates business reasons justifying treating the infrastructure code the same way production code is treated, e.g. giving it proper structure and testing it. It goes past the justification and also teaches us how to do it. Definitely a great talk.
+> One thing I've seen happening again and again is the trend "this is not code, not really". I've seen this happen (and still see it happen) when talking about automated tests, about continuous integration code, Dockerfile, bash scripts and of course, in infrastructure code. This very important talk enumerates business reasons justifying treating the infrastructure code the same way production code is treated, e.g., giving it proper structure and testing it. It goes past the justification and also teaches us how to do it. Definitely a great talk.
 
 ### 7. Disenchantment: Netflix Titus, Its Feisty Team, and Daemons - Andrew Spyker - 2018
 
 [Disenchantment: Netflix Titus, Its Feisty Team, and Daemons](https://www.infoq.com/presentations/netflix-titus-2018/)
 
-I have to say that I thought this talk was a bit slow at the beginning, but once it kicked in second and third gears, I was floored to see the awesomeness of what Netflix has accomplished over the years and how inspiring what they’ve done is.
+I have to say that I thought this talk was a bit slow at the beginning, but once it kicked in second and third gear, I was floored to see the awesomeness of what Netflix has accomplished over the years and how inspiring what they’ve done is.
 
 ### 6. Spinnaker: continuous delivery from first principles to production - Steven Kim - 2017
 
@@ -68,7 +68,7 @@ This is how @klalumiere described this talk:
 
 [Full Cycle Developers @Netflix](https://www.infoq.com/presentations/netflix-devops)
 
-Definitely a good talk to watch if you’re getting into the devops philosophy or if you’re mid-way through the transformation and would like to know if there is light at the end of the tunnel. Greg Burrell goes through the trials and errors they've been through and goes throughout the core concept behind their transformation to where they are right now.
+Definitely a talk to watch if you’re getting into the devops philosophy or if you’re mid-way through the transformation and would like to know if there is light at the end of the tunnel. Greg Burrell goes through the trials and errors they've been through and goes throughout the core concept behind their transformation to where they are right now.
 
 ### 2. Stop Rate Limiting! Capacity Management Done Right - Jon Moore - 2017
 
@@ -82,4 +82,4 @@ I really liked this talk, but I am highly biased because I love queuing theory a
 
 And now for the most liked presentation by the Coveo R&D team: Would you like to get rid of all your illusions about physical security? Your wait is over, watch this video and all of these will be gone forever! As a bonus, _all_ of your colleagues will be turned into physical pentesters! Jokes apart, this video is really an eye opener and you will never look at doors and physical security the same way ever after.
 
-And that’s it for 2019 😁! I had to rewatch some of those videos to make sure I gave a proper description and wow… they really deserve to be there. Those videos are still good to rewatch. See you in a year for the top 10 in 2020.
+And that’s it for 2019 😁! I had to rewatch some of those videos to make sure I gave a proper description and wow… they really deserve to be there. These videos are still good to rewatch. See you in a year for the top 10 in 2020.
