Improve the text based on François' feedback https://coveord.atlassian.net/browse/top-10

--- a/_posts/2020-01-13-videolunch-top-10-2019.md
+++ b/_posts/2020-01-13-videolunch-top-10-2019.md
@@ -28,7 +28,7 @@ From @klalumiere
 
 [If You Don’t Know Where You’re Going, It Doesn’t Matter How Fast You Get There](https://www.infoq.com/presentations/outcome-project-management)
 
-Jez Humble and Dr. Nicole Forsgren talk about the impact of Continuous Delivery and how elite teams are able to differentiate themselves from low performing teams.
+Jez Humble and Dr. Nicole Forsgren talk about the impact of Continuous Delivery and how elite teams are able to differentiate themselves from low performing teams. I really appreciate the methodical and scientific approach taken in this talk, something I wish was more present in presentations that often claim a miraculous way to improve without showing any factual data to back it up.
 
 ### 8. 5 Lessons Learned From Writing Over 300,000 Lines of Infrastructure Code - Yevgeniy Brikman - 2018
 
@@ -60,6 +60,8 @@ Michael Feather is an amazing orator that is able to put words and properly char
 ### 4. Idée Fixe - David Nolen - 2017
 
 [Idée Fixe](https://www.youtube.com/watch?v=lzXHMy4ewtM)
+
+I would say this talk is about innovation, ideas and how to allow yourself to change your mind and understand how preconception is stopping you from truely innovating.
 
 This is how @klalumiere described this talk:
 > I've watched a lot of presentations by David Nolen and pretty much all of them were great. I think David Nolen is one of the very smart developers out there, and he is also a great presenter. It's definitely worth listening to him when he takes the stand.
