Add a sentence following's LG's comment

--- a/_posts/2023-08-18-dnd-genai.md
+++ b/_posts/2023-08-18-dnd-genai.md
@@ -113,6 +113,8 @@ I was surprised at how quickly I was able to make everything work! I started mak
 
 For those of you reading that know Dungeons and Dragons, you'll find that the answers to those questions are pretty accurate. Plus, if you didn't trust the answer given by GenAI, you'd be able to click directly on the actual documents it used to come up with its answer, something every DM wish they could give to their players when they're questioning your ruling.
 
+And I was able to do all this without even reinforcing the model! It's not a secret that, when it comes to Machine Learning, things improve over time as more and more people interact with the experience. In my case, I was even to accomplish a working and relevant GenAI model even before reaching this point. I can't imagine what sort of amazing things would happen give more interactions.
+
 ## The Conclusion
 
 If I had to describe in one sentence my feelings towards testing Coveo's GenAI product, I would say that I was amazed. Implementing GenAI is currently still a little rough around the edges, with many different individual API calls required to configure everything. But, these are details that can be improved on as we move towards a full GA release. What really matters is the results, and I can already see how amazing those results can be, especially considering the small amount of effort I needed to put in.
