--- a/_posts/2023-08-18-dnd-genai.md
+++ b/_posts/2023-08-18-dnd-genai.md
@@ -111,7 +111,7 @@ I was surprised at how quickly I was able to make everything work! I started mak
 
 For those of you reading that know Dungeons and Dragons, you'll find that the answers to those questions are pretty accurate. Plus, if you didn't trust the answer given by GenAI, you'd be able to click directly on the actual documents it used to come up with its answer, something every DM wish they could give to their players when they're questioning your ruling.
 
-And I was able to do all this without even reinforcing the model! It's not a secret that, when it comes to Machine Learning, things improve over time as more and more people interact with the experience. In my case, I was even to accomplish a working and relevant GenAI model even before reaching this point. I can't imagine what sort of amazing things would happen give more interactions.
+And I was able to do all this without even reinforcing the model! It's not a secret that, when it comes to Machine Learning, things improve over time as more and more people interact with the experience. In my case, I was able to accomplish a working and relevant GenAI model even before reaching this point. I can't imagine what sort of amazing things would happen given more interactions.
 
 ## The Conclusion
 
