--- a/_posts/2023-08-18-dnd-genai.md
+++ b/_posts/2023-08-18-dnd-genai.md
@@ -11,7 +11,7 @@ author:
 ---
 
 > As of December 15th 2023, GenAI is now GA with Coveo. A lot of the steps I wrote in this blog post are not needed anymore, as the flow is now much simpler.
-You can find more information on Relevance Generatie Answering (RGA) in our [documentation](https://docs.coveo.com/en/n9de0370/leverage-machine-learning/about-relevance-generative-answering-rga).
+You can find more information on Relevance Generative Answering (RGA) in our [documentation](https://docs.coveo.com/en/n9de0370/leverage-machine-learning/about-relevance-generative-answering-rga).
 
 As you [may](https://www.coveo.com/en/company/news-releases/2023/coveo-gen-ai-exclusive-offer) [have](https://www.globenewswire.com/en/news-release/2023/06/08/2684735/0/en/Coveo-Unleashes-Groundbreaking-GenAI-Enterprise-Product-with-Customer-Design-Partners-and-Exclusive-Pricing-Offer-for-Early-Adopters.html) [heard](https://www.bnnbloomberg.ca/ai-firm-coveo-reports-revenue-hike-as-it-launches-chatgpt-rival-1.1956924), Coveo recently released its Generative Answering solution (also called "GenAI"). It's been all the hype internally at Coveo, as well as externally with multiple customers and partners approaching us to play with this new product and implement it on their end.
 
