--- a/_posts/2024-01-09-coveo-blitz-2023.md
+++ b/_posts/2024-01-09-coveo-blitz-2023.md
@@ -10,50 +10,67 @@ author:
   image: mabeaulieu-coveo.jpg
 ---
 
-## Introduction TODO PLACEHOLDER TITLE
+En janvier dernier avait lieu la 14ᵉ édition de Coveo Blitz, notre [compétition annuelle de programmation pour étudiants](https://www.coveo.com/blog/fr/coveo-blitz-10-ans-en-un-eclair/). Ceux qui sont familiers avec la compétition reconnaîtront la formule des dernières années : un jeu de notre cru est présenté aux participants, ils disposent de 10 heures pour programmer un _bot_ qui saura y jouer et triompher dans des matches de deux ou quatre équipes participantes.
 
-En janvier dernier avait lieu la 14ᵉ édition de [Coveo Blitz](https://www.coveo.com/blog/fr/coveo-blitz-10-ans-en-un-eclair/), notre compétition annuelle de programmation pour étudiants . Ceux qui sont familiers avec Blitz reconnaîtront la formule des dernières années : un jeu de notre cru est présenté aux participants, ils disposent de 10 heures pour programmer un _bot_ qui saura y jouer et vaincre dans des matches de deux ou quatre équipes participantes. Ainsi, à chaque tour de jeu, les _bot_ de chacune des équipes doivent une liste d'actions qu'ils veulent effectuer : si le programme cesse de répondre, aucune action n'est exécutée. Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être le dernier survivant.
+Cette année, notre défi revêt le thème de l'espace : chaque équipe est aux commandes de l'équipage d'un vaisseau qui doit affronter d’autres équipes afin d’être le dernier survivant. Force est d'admettre que cette fois-ci, les concepteurs se sont dépassés en termes de richesse et complexité : il y avait une grande variété d'actions possibles, et donc de stratégies disponibles, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer certaines des stratégies employées, mais plus important, comment en tant que joueur, on peut s'attaquer à ce genre de défi.
 
-La conception et présentation du défi est d'ailleurs une partie toujours très excitante à l'interne. En tant que coach, nous sommes invités à jouer le rôle de "beta tester" en concevant notre _bot_ en solo, histoire de non seulement trouver et réparer le plus de bugs possibles, mais aussi fournir un répertoire bien garni d'adversaires de pratique lors de la compétition. C'est à ce titre que cette année et dans un cadre assez différent que celui de la compétition elle-même, que j'ai moi aussi relevé le défi.
+<!-- more -->
 
-Il faut dire que cette année, les concepteurs du jeu se sont dépassés en termes de complexité. Il y a une grande variété d'actions possibles, et donc de stratégies disponibles, sans compter certains défis techniques au niveau de l'implémentation. J'aimerais dès lors explorer quelques-unes de ces stratégies, et surtout ce qui nous mène à l'élaboration de celles-ci, de manière plus générale. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la coupe cette année, ainsi que SG1, une équipe vétérane qui participe à la phase de beta test chaque année.
+En tant que coach, nous sommes invités à jouer le rôle de "beta tester" en concevant notre propre _bot_ en solo. C'est à ce titre que cette année et dans un cadre assez différent que celui de la compétition elle-même, que j'ai moi aussi relevé le défi. Je me suis par ailleurs entretenue avec Leebly, l'équipe étudiante qui a remporté la coupe cette année, ainsi que SG1, une équipe vétérane qui participe à la phase de beta test chaque année.
 
-## Le défi en bref TODO PLACEHOLDER TITLE
+<!-- more -->
 
+## Comment bien commencer
+
+La première étape lorsque l'on joue à un jeu est sans doute de se familiariser avec les règles. Comme mentionné précédemment, le jeu cette année était particulièrement sophistiqué et complexe. Je vais ici tenter de résumer la compréhension que j'en ai eue lors de ma première lecture des règles.
 
 INSERT PICTURE OF BATTLEFIELD
 
+Chaque équipe commande un vaisseau spacial : le dernier vaisseau survivant est le vainqueur. Les vaisseaux ont bien sûr un nombre de points de vie, qui ne peuvent être régénéré d'aucune façon. Lorsque le vaisseau n'a plus de point de vie, il est éliminé.
+
 INSERT PICTURE OF A SHIP HERE
 
-On ne peut pas contrôler le vaisseau à proprement parler, mais plutôt diriger chacun des quatre membres de son équipage pour qu'ils opèrent les différentes stations dispersées à travers le vaisseau. Les actions que nous pouvons prendre consistent donc à ordonner à un membre d'équipage de se déplacer vers une position donnée dans le vaisseau, ou alors, s'il se trouve sur une station, de l'opérer. Les amateurs de jeux vidéos ne manqueront pas d'y voir des ressemblances avec quelques-unes des inspirations de nos concepteurs, soit _FTL: Faster Than Light_, _Lovers in a Dangerous Spacetime_, _Space Rogue_ et _Tarsis_.
+À chaque tour de jeu, ou _tick_, les _bots_ de chacune des équipes doivent soumettre la liste d'actions qu'ils veulent effectuer : si le programme cesse de répondre, aucune action n'est exécutée. On ne peut pas contrôler le vaisseau à proprement parler, mais plutôt diriger chacun des quatre membres de son équipage de sorte qu'ils opèrent les différentes stations dispersées à travers celui-ci. Les actions que notre _bot_ peut émettre consistent donc à ordonner à un membre d'équipage de se déplacer vers une position donnée dans le vaisseau, ou alors, s'il se trouve sur une station, de l'opérer. Les amateurs de jeux vidéos ne manqueront pas d'y voir des ressemblances avec quelques-unes des inspirations de nos concepteurs, dont _FTL: Faster Than Light_, _Lovers in a Dangerous Spacetime_, _Space Rogue_ et _Tarsis_.
 
-Tout d'abord, il y a cinq types de **stations d'armes**. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également des vitesses et forces d'attaques distinctes, en plus de bonus contre le bouclier ou contre la coque du vaisseau.
+Il y a quatre types de stations à bord du vaisseau. D'abord, il y a les _stations d'armes_, qui elles-mêmes se déclinent en cinq types de tourelles qui ont leurs propres spécificités. Certaines peuvent être orientées dans n'importe quelle direction, d'autres ont une orientation fixe par rapport au centre du vaisseau. Chaque type a également des vitesses et forces d'attaques distinctes, en plus de bonus contre le bouclier ou contre la coque du vaisseau. Elles peuvent toutes être chargées afin de maximiser leur puissance d'attaque, mais ont une charge totale maximale différente encore une fois.
 
-La position du vaisseau lui-même est fixe dans l'espace. Or, on peut le faire pivoter à partir d'une **station de contrôle**, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de positionner les tours d'attaque fixes du vaisseau pour qu'elles soient dirigées vers un vaisseau adverse.
+La position du vaisseau lui-même est fixe dans l'espace. Or, on peut le faire pivoter sur-lui même à partir d'une _station de contrôle_, dite _helm_. Cette station est d'autant plus importante, car c'est la seule façon de repositionner les tourelles fixes du vaisseau pour qu'elles aient un vaisseau adverse dans leur ligne de mire.
 
-Pour ce qui est de la défense, chaque vaisseau a un bouclier, qui se régénère automatiquement à chaque tour. Or, une fois le bouclier épuisé, il cessera de se régénérer, la coque du vaisseau est exposée et c'est la vie de celui-ci qui est en jeu. Les **stations du bouclier** permettent d'accélérer de réparer le bouclier ou d'accélérer son rythme de régénération lorsqu'il est en fonction.
+Pour ce qui est de la défense, chaque vaisseau a un bouclier, qui se régénère automatiquement à chaque tour. Or, une fois le bouclier épuisé, il cessera de se régénérer, et c'est la vie du vaisseau lui-même qui est en jeu. Les _stations du bouclier_ permettent de réparer le bouclier ou d'accélérer sa vitesse de régénération lorsqu'il est en fonction.
 
-À noter que les attaques des autres joueurs n'est pas la seule menace : notre vaisseau sera rapidement soumis aux intempéries de l'espace intersidéral. Le combat se déroule au milieu d'un champ de météores où seront projetés les débris des autres vaisseaux et du vôtre, tout dépendant de qui s'en sort le mieux bien sûr. Alors que le visuel du jeu nous offre l'information complète, notre _bot_ en réalité est limité dans l'accès qu'il a à l'état du jeu. Par rapport aux vaisseaux adverses, la seule information connue est la position des vaisseaux toujours en jeu. De plus, notre détection des météores et débris est limitée. Les **stations de radar** permettent de gagner de l'information sur les adversaires d'augmenter la distance de détection des débris sur le champ de bataille.
+À noter que les attaques des autres joueurs ne sont pas les seules menaces : le combat se déroule au milieu d'un champ de météores où sont projetés les débris des autres vaisseaux et du vôtre. Alors que les spectateurs du jeu peuvent faire état de tous les projectiles dangereux en un coup d'œil, notre _bot_ lui n'a qu'une perception incomplète de l'état du jeu. C'est là qu'entre en jeu le dernier type de stations disponible : les _stations de radar_ permettent de gagner de l'information détaillée sur les adversaires et d'augmenter la distance de détection des débris sur le champ de bataille.
 
-## Premier pas TODO PLACEHOLDER TITLE
+## Premières itérations et premiers bogues
 
-Si je peux me permettre une nouvelle tournure d'un adage célèbre : "celui qui n'a jamais fait de _bug_ n'a jamais codé." Vous allez faire des erreurs, c'est inévitable, et ça peut être à différent niveau. Lors de ma lecture des règles, j'avais mal compris comment le radar fonctionnait pour les vaisseaux ennemis morts : je pensais qu'il me permettrait de voir un vaisseau sans vie, alors qu'au contraire, les vaisseaux éliminés ne sont tout simplement plus détectés par le radar. Ainsi, au lieu de faire un scan rapide des ennemis et retourner à ses autres priorités, le membre d'équipage que j'avais envoyé au radar y restait indéfiniment du moment qu'un ennemi était éliminé : quelle perte d'efficacité ! Lorsque je m'en suis rendu compte, j'ai mis de côté l'utilisation du radar : au final, j'ai relu la documentation et compris comment trouver les vaisseaux toujours en vie et mis au rancart mon utilisation du radar - j'y suis revenue plus tard dans un autre contexte toutefois.
+Lorsqu'on pense stratégie dans ce type de jeu, la balance entre l'offense et la défense entre rapidement en ligne de compte. SG1, par exemple, m'ont dit avoir de manière générale avoir favorisé une stratégie plus défensive, soit manier le shield, détruire les météores et autres débris, etc. Ils m'ont d'ailleurs rappelé le très judicieux conseil suivant :
 
-À Blitz, une des façons préconisée de valider nos changements est d'utiliser le model local. Lorsque l'on fait des changements, on peut lancer des *bots* de notre poste et visionner des matches. Cela m'a souvent permis de voir des bugs que j'avais introduits. Un exemple particulièrement coûteux, est lorsque je venais d'ajouter un nouveau type d'action à prioriser : en visionnant un match, je me suis rendue compte que certains de mes membres d'équipage, souvent au nombre de deux étaient perpétuellement en mouvement. En débogant, je me suis aperçue que mon assignation de tâche était instable : pour un _tick_, membre A était en mouvement vers la station X, membre B vers la station Y, et un ou deux ticks plus tard, membre A était rediriger vers la station Y et membre B vers la station X, et le ping-pong recommence quelque ticks plus tard, sans qu'aucun n'atteigne aucune des stations. Ce genre de problème, s'il n'est pas réglé peut-être fatal : des membres d'équipages em mouvement n'opèrent aucune station et n'apportent aucune valeur. 
+> Pas besoin de courir plus vite que l'ours pour s'enfuir. Il suffit de courir plus vite que l'autre à côté de toi.
 
-Il y a des bugs qui peuvent briser l'implémentation au point qu'ils vont réduire votre _bot_ à un bot qui ne font rien . On ne peut pas de manière réaliste, se dire que ça n'arrivera pas. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. Regarder des parties en model local est une bonne façon. Il y a également d'autres raisons pourquoi est-ce que l'on devrait regarder des parties de Blitz.
+Personnellement, je suis moins sage et plus sauvage à ma façon : j'ai opté pour commencer par envoyer tous les membres d'équipage vers les tourelles d'attaque et attaquer, sans me soucier de leur orientation ou d'autre critère de performance. 
+
+Lorsque j'ai interrogé Leebly pour savoir quel a été leur plan en début de journée, leur première itération en terme d'offense très similaire au mien, ou du moins tout aussi rudimentaire. Fait plus cocasse, avec notre technique naïve, Leebly et moi avons introduit le même bogue, à savoir que nous avions négligé d’envoyer les membres d’équipage à des tourelles distinctes : très inefficace. Coincidence ? Peut-être pas tant que ça. Si je peux me permettre une nouvelle tournure d'un adage célèbre : 
+
+> Celui qui n'a jamais fait de bogues n'a jamais codé. 
+
+Vous allez faire des erreurs, c'est inévitable. Heureusement, lorsque l'ensemble des changements introduit est petit, comme c'était le cas pour notre stratégie d'attaque grossière, c'est souvent plus facile à détecter et réparer.
+
+À Blitz, une des façons préconisée de valider nos changements est d'utiliser le mode local. Lorsque l'on fait des changements, on peut lancer des parties de notre poste et les visionner. Cela m'a souvent permis de voir des bogues que j'avais introduits. Un exemple particulièrement coûteux, est lorsque je venais d'ajouter un nouveau type d'action à prioriser : or, suite à ce changement, il arrivait fréquemment qu'une paire de mes membres d'équipage demeurait en perpétuel en mouvement, prisonnier de quelque chose qui s'apparente à la très embarrassante danse du "toi d'abord - non toi vas-y", et qui n'était certainement pas acceptable dans mon plan de domination intergalactique. Ce genre de problème, s'il n'est pas détecté et réglé peut-être fatal. 
+
+Il y a des bogues qui peuvent briser l'implémentation au point qu'ils vont réduire votre _bot_ à un bot qui ne font rien . On ne peut pas de manière réaliste, se dire que ça n'arrivera pas. La clé est plutôt de s'outiller pour détecter et comprendre les problèmes rapidement. À défaut de tests automatisés, dans le contexte de Blitz, regarder des parties en model local peut nous aider à nous valider. Il y a en fait bien plus de raisons sur pourquoi est-ce que l'on devrait regarder des parties de Blitz.
 
 ## Watching "games" TODO PLACEHOLDER
 
-L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait de mourir simplement parce qu'un gros météore venait me frapper et m'enlever 16% de la vie de mon vaisseau d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre, contrairement à d'autres, les pluies incessantes de météores. Personnellement, j'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores, s'il y en a, en étant affecté à une station d'arme rotative, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier, j'ai utilisé le radar et sauvegardé l'état du jeu afin de prédire la venue des météores plus tôt.
+L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros météore venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre les pluies incessantes de météores. Personnellement, j'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores, s'il y en a, en étant affecté à une tourelle rotative, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper la venue des météores plus tôt.
 
-Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, rappelons-le, notre temps est fini : on ne peut pas raisonnablement penser qu'on aura le temps de tout implémenter, alors il faut choisir. Même dans sa forme la plus simple, se prévenir des météores était une tâche avec beaucoup de subtilités : il vaut mieux s'y lancer seulement si c'est réellement un problème.
+Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. Même dans sa forme la plus simple, se prévenir des météores était une tâche avec beaucoup de subtilités : il vaut mieux s'y lancer seulement si c'est réellement un problème, et dans mon cas, ça ne l'est devenu qu'au bout de quelques itérations, tandis que notre compétition interne était plus avancée.
 
-Évidemment, regarder les parties est aussi un bon moment pour espionner les stratégies adverses. Revenons au fameux problème du choix des stations d'armes. J'avais commencé par favoriser les stations amovibles, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques itérations et les améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de 4 tours rotatives accessibles et que je me défends plus efficacement des menaces externes, il arrive de plus en plus fréquemment qu'un de mes membres d'équipage se tourne les pouces. Il est donc temps de commencer à utiliser les stations d'armes fixes : laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des stations d'armes fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à faire office d'une meilleure défense en général, car les missiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille, ce qui n'était pas nécessairement évident seulement à la lecture des règles. J'ai donc ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter ma tour préférée dans la bonne direction. Je n'aurai pas le temps de raffiner la sélection du type de tours : au final ça n'aura pas été nécessaire.
+MAB RE-READ FROM HERE
+
+Évidemment, regarder les parties est aussi un bon moment pour espionner les stratégies adverses. Revenons à la question des meilleures tourelles à prioriser. Pendant longtemps, j'ai favorisé les stations amovibles, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de quatre tours rotatives accessibles et que je me défends mieux contre les menaces externes, il arrive de plus en plus fréquemment qu'un de mes membres d'équipage se tourne les pouces. Il est donc temps de commencer à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des stations d'armes fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car les projectiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille. J'ai donc ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter ma tour préférée dans la bonne direction. Je n'aurai pas le temps de raffiner la sélection du type de tours : au final ça n'aura pas été nécessaire.
 
 Une autre idée que j'ai implémentée est de charger au maximum avant de tirer. Or, ce n'était vraiment pas clair pour moi à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente, et j'ai donc adopté le changement. À l'inverse, lorsque j'ai parlé à SG1, une autre équipe interne de Coveo, ils m'ont dit avoir écarté cette stratégie, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins compétitifs. Il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment et savoir s'adapter selon notre réalité. 
 
-## Rinse and repeat often TODO PLACE HOLDER TITLE
+## Rince and repeat TODO PLACE HOLDER TITLE
 
 Commençons seulement avec les tours d'armes, on peut rapidement y voir plusieurs problèmes intéressants :
 
@@ -63,13 +80,13 @@ Commençons seulement avec les tours d'armes, on peut rapidement y voir plusieur
 
 Mais encore, toutes ces questions sont sans compter le compromis à faire avec quand favoriser la défense au lieu de l'offense. Ici, on pourrait se perdre pendant des heures dans des discussions sur comment aborder le problème. Or, c'est justement là que réside un problème plus fondamental : nous n'avons pas des heures, le défi est limité en temps, 10 heures pour être exact. En tant que coach, lorsque l'on test le défi en solo, nous sommes de même limités dans le temps juste par la nature des choses : le défi est disponible seulement pendant quelque temps personne n'y dédiera son entière existence d'ici la finale. Bref, notre créativité et nos idées sont peut-être infinie, mais notre temps ne l'est pas.
 
-Ainsi, bien qu'il soit important, avant de se lancer dans une solution, d'avoir une bonne compréhension des choses, un premier conseil serait de commencer par des petites choses simples. Lorsque j'ai interrogé Leebly pour savoir quel a été leur plan en début de journée, je me suis aperçue qu'eux et moi avions entamé le problème de la même façon : implémenter du code pour envoyer tous les membres sur une station d'arme quelconque et d'attaquer, sans se soucier de si cette station d'arme est la plus optimale selon un quelconque critère. Coincidence ? Peut-être pas tant que ça. Il est probablement très naturel pour plusieurs de considérer implémenter une quelconque stratégie offensive. Or, dans l’esprit de la simplicité, la méthode choisie précédemment en est une de ses formes les plus élémentaires.
-
-Fait plus cocasse, avec notre technique naïve, Leebly et moi avons introduit le même bug, à savoir que nous avions négligé d’envoyer les membres d’équipage à des stations distinctes, ce qui est hautement inefficace. Ce type de problème est toutefois facile à régler en soi, et des ajustements ont pu être apportés promptement. À noter qu'il s'agit là encore d'un bon point pour la simplicité et les petits changements : ça rend le débogage bien moins ardu.
+Ainsi, bien qu'il soit important, avant de se lancer dans une solution, d'avoir une bonne compréhension des choses, un premier conseil serait de commencer par des petites choses simples.
 
 L'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passé avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où il y a de la priorisation sur le type de tour. Cette année, ils ont commencé par implémenter une attaque élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible. Lorsqu'ils se sont attaqué à la priorisation plus tard, les implémentations qu'ils ont essayées n'ont pas donné de meilleurs résultats contre leurs adversaires : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
 
 ## La stratégie finale
+
+Il faut dire que cette année, les concepteurs du jeu se sont dépassés en termes de complexité. Il y a une grande variété d'actions possibles, et donc de stratégies disponibles, sans compter certains défis techniques au niveau de l'implémentation.
 
 Lorsque j'ai commencé cet article, on m'avait donné pour thème "Blitz 2024 et les stratégies". Je pourrais donc conclure en vous parlant de mon _bot_ du fait que j'ai implémentée une série d'aciton à prioriser, sous certaines conditions, et que pour chacune des actions, je tentais d'y assigner le membre d'équipage le plus proche. En ordre d'importance, cela consistait grosso modo à :
 1. Faire un scan au radar s'il n'y en a pas eu dans les 200 derniers ticks ;
@@ -95,4 +112,4 @@ Au final, je viens de décrire un simple procéder itératif d'implémentation 
 
 _Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. à Andy Emond et Jessie Emond de m'avoir parlé de leurs stratégies. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
 
-TODO MAB: Conclure - est-ce qu'on parle toujours de Blitz ?
+TODO MAB: Conclure - est-ce qu'on parle toujours de Blitz ?****
