--- a/_posts/2024-01-09-coveo-blitz-2023.md
+++ b/_posts/2024-01-09-coveo-blitz-2023.md
@@ -62,15 +62,14 @@ Il y a des bogues qui peuvent briser l'implémentation au point qu'ils vont réd
 
 L'espace est un milieu hostile, et je ne l'ai que trop bien réalisé à Blitz : alors que je visionnais des matches contre les autres équipes, je me suis rendue compte qu'il m'arrivait d'être éliminée simplement parce qu'un gros météore venait me frapper et enlever la quasi-totalité de mon bouclier d'un coup. J'avais déjà une stratégie élémentaire d'attaque et de défense contre les autres joueurs, mais si moindrement la partie s'allongeait, je n'arrivais pas à survivre les pluies incessantes de météores. Personnellement, j'ai opté pour une solution simple : un membre d'équipage dédié à la destruction des gros et moyens météores, s'il y en a, en étant affecté à une tourelle rotative, et donc capable de viser rapidement n'importe quelle cible. J'ai raffiné la méthode avec le temps : entre autres, j'ai exclu les météores dont la trajectoire n'allait pas intersecter mon bouclier et j'ai utilisé le radar anticiper la venue des météores plus tôt.
 
-Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. Même dans sa forme la plus simple, se prévenir des météores était une tâche avec beaucoup de subtilités : il vaut mieux s'y lancer seulement si c'est réellement un problème, et dans mon cas, ça ne l'est devenu qu'au bout de quelques itérations, tandis que notre compétition interne était plus avancée.
+Évidemment, regarder les parties est aussi un bon moment pour espionner la compétition. Pendant longtemps, j'ai favorisé les stations amovibles, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de quatre tours rotatives accessibles et que je me défends mieux contre les menaces externes, il arrive de plus en plus fréquemment qu'un de mes membres d'équipage se tourne les pouces. Il est donc temps de commencer à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des tourelles fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car les projectiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille. J'ai ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter une tourelle de mon type préféré dans la bonne direction. Je n'aurai pas le temps de raffiner la sélection du type de tours : au final ça n'aura pas été nécessaire.
 
-MAB RE-READ FROM HERE
-
-Évidemment, regarder les parties est aussi un bon moment pour espionner les stratégies adverses. Revenons à la question des meilleures tourelles à prioriser. Pendant longtemps, j'ai favorisé les stations amovibles, car elles étaient plus simples à opérer et ne nécessitaient pas une rotation du vaisseau. Néanmoins, après quelques améliorations faites à ma défense, je me rends compte encore une fois que je plafonne dans le classement : comme la plupart des vaisseaux ont moins de quatre tours rotatives accessibles et que je me défends mieux contre les menaces externes, il arrive de plus en plus fréquemment qu'un de mes membres d'équipage se tourne les pouces. Il est donc temps de commencer à utiliser les tourelles d'attaque fixes : mais laquelle choisir ? Pour ce faire, je me suis basée sur mes observations des matches jouées : certains de mes adversaires avaient déjà implémenté l'utilisation des stations d'armes fixes. J'ai remarqué que les stations de tir à haute fréquence avaient tendance à bien complémenter la défense en général, car les projectiles fréquents offrent en contrepartie une défense plus constante sur le champ de bataille. J'ai donc ajouté ce qu'il fallait pour opérer les tours fixes qui étaient en direction de l'ennemi, en priorisant les tours selon leur type, avec celles qui me semblaient le plus rapide et versatile d'abord. Rapidement ensuite viendra la réorientation du vaisseau afin d'orienter ma tour préférée dans la bonne direction. Je n'aurai pas le temps de raffiner la sélection du type de tours : au final ça n'aura pas été nécessaire.
-
-Une autre idée que j'ai implémentée est de charger au maximum avant de tirer. Or, ce n'était vraiment pas clair pour moi à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente, et j'ai donc adopté le changement. À l'inverse, lorsque j'ai parlé à SG1, une autre équipe interne de Coveo, ils m'ont dit avoir écarté cette stratégie, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins compétitifs. Il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment et savoir s'adapter selon notre réalité. 
+Une autre idée que je voulais implémenter est de charger au maximum avant de tirer. Or, ce n'était vraiment pas clair pour moi à quel point c'était avantageux ou pas dans certaines situations. J'ai donc fait une petite expérience : en local, j'ai opposé le _bot_ avec seulement ce changement contre le _bot_ de ma version précédente. Il s'est avéré que la nouvelle version gagnait constamment contre la précédente. J'ai dès lors adopté le changement et pu constater que je continuais de monter dans le classement. À l'inverse, lorsque j'ai parlé à l'équipe SG1, ils m'ont mentionné avoir écarté cette stratégie, car lorsqu'ils l'ont essayé, ils ont observé qu'ils étaient moins performants contre les autres équipes. Comme quoi il y a plusieurs raisons qui font qu'un élément de stratégie peut bien marcher pour une équipe et pas une autre : de là l'importance de s'auto-évaluer constamment et savoir s'adapter selon notre réalité. 
 
 ## Rince and repeat TODO PLACE HOLDER TITLE
+
+Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
+
 
 Commençons seulement avec les tours d'armes, on peut rapidement y voir plusieurs problèmes intéressants :
 
@@ -82,7 +81,7 @@ Mais encore, toutes ces questions sont sans compter le compromis à faire avec q
 
 Ainsi, bien qu'il soit important, avant de se lancer dans une solution, d'avoir une bonne compréhension des choses, un premier conseil serait de commencer par des petites choses simples.
 
-L'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passé avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où il y a de la priorisation sur le type de tour. Cette année, ils ont commencé par implémenter une attaque élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible. Lorsqu'ils se sont attaqué à la priorisation plus tard, les implémentations qu'ils ont essayées n'ont pas donné de meilleurs résultats contre leurs adversaires : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
+L'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où il y a de la priorisation sur le type de tour. Cette année, ils ont commencé par implémenter une attaque élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation et réparé leurs bogues. Lorsque plus tard, ils se sont attaqué à la priorisation plus tard, leurs essais n'ont pas donné de meilleurs résultats contre leurs adversaires : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
 
 ## La stratégie finale
 
