--- a/_posts/2024-01-09-coveo-blitz-2023.md
+++ b/_posts/2024-01-09-coveo-blitz-2023.md
@@ -70,45 +70,25 @@ Une autre idée que je voulais implémenter est de charger au maximum avant de t
 
 Dans l'effervescence de la compétition, il est tentant de se plonger dans le code sans interruptions, ajouter le plus de sophistication possible et maximiser notre temps d'implémentation. Or, notre temps est fini, et notre créativité potentiellement infinie : on ne peut pas raisonnablement penser qu'on aura le temps d'implémenter toutes nos idées, alors il faut choisir. 
 
-
-Commençons seulement avec les tours d'armes, on peut rapidement y voir plusieurs problèmes intéressants :
-
-- Quelle est le meilleur type de tour à utiliser ? Est-ce que ça vaut la peine de changer de tour selon si le vaisseau adverse a son bouclier ou non ?
-- Quand vaut-il mieux charger au lieu de tirer ?
-- Quel vaisseau ennemi devrait-on cibler ?
-
-Mais encore, toutes ces questions sont sans compter le compromis à faire avec quand favoriser la défense au lieu de l'offense. Ici, on pourrait se perdre pendant des heures dans des discussions sur comment aborder le problème. Or, c'est justement là que réside un problème plus fondamental : nous n'avons pas des heures, le défi est limité en temps, 10 heures pour être exact. En tant que coach, lorsque l'on test le défi en solo, nous sommes de même limités dans le temps juste par la nature des choses : le défi est disponible seulement pendant quelque temps personne n'y dédiera son entière existence d'ici la finale. Bref, notre créativité et nos idées sont peut-être infinie, mais notre temps ne l'est pas.
-
-Ainsi, bien qu'il soit important, avant de se lancer dans une solution, d'avoir une bonne compréhension des choses, un premier conseil serait de commencer par des petites choses simples.
-
-L'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où il y a de la priorisation sur le type de tour. Cette année, ils ont commencé par implémenter une attaque élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation et réparé leurs bogues. Lorsque plus tard, ils se sont attaqué à la priorisation plus tard, leurs essais n'ont pas donné de meilleurs résultats contre leurs adversaires : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
-
-## La stratégie finale
-
-Il faut dire que cette année, les concepteurs du jeu se sont dépassés en termes de complexité. Il y a une grande variété d'actions possibles, et donc de stratégies disponibles, sans compter certains défis techniques au niveau de l'implémentation.
-
-Lorsque j'ai commencé cet article, on m'avait donné pour thème "Blitz 2024 et les stratégies". Je pourrais donc conclure en vous parlant de mon _bot_ du fait que j'ai implémentée une série d'aciton à prioriser, sous certaines conditions, et que pour chacune des actions, je tentais d'y assigner le membre d'équipage le plus proche. En ordre d'importance, cela consistait grosso modo à :
-1. Faire un scan au radar s'il n'y en a pas eu dans les 200 derniers ticks ;
-2. Envoyer un membre à la station de bouclier si le bouclier est sous un certain seuil, conditionnel au nombre de point de vie du vaisseau également ;
-3. Orienter le vaisseau de sorte que certaines stations d'armes fixes soient dirigées vers un ennemi précis ;
-4. Attaquer les gros météores qui se dirigent vers mon vaisseau ;
-5. Et enfin, charger au maximum et attaquer un vaisseau adverse donné avec tous les membres d'équipages restants, ou aller à une station de bouclier si aucune station d'armes valides n'était accessible.
-
-Or, je crois qu'il serait un peu caduque de s'en tenir à la stratégie que j'ai employée ainsi. Voici plutôt comment que j'ai abordé le problème en début de journée :
-1. Se faire une tête des règles du jeu et des possibilités ;
-2. Commencer à implémenter des idées sous leur forme la plus simple et élémentaire possible ;
-3. Regarder quelques matches contre moi-même pour valider que mon idée est bien implémentée ;
-4. Regarder des matches contre les autres ou contre la version précédente de mon _bot_ afin d'évaluer sa performance et ses limites ;
-5. Ajouter une nouvelle idée ou améliorer une fonctionnalité existante sous sa forme la plus simple, afin de palier à un problème soulevé à l'étape précédente ;
-6. Retourner à l'étape 3.
-
-Au final, je viens de décrire un simple procéder itératif d'implémentation : on s'assure de faire de petits changements à la fois, d'aller chercher le plus de rétroaction possible entre chaque itération, puis prioriser les tâches en conséquences. Lors de ma discussion avec les membres de Leebly, quand je leur ai demandé de me parler de leur stratégie, ils m'ont spontanément répondu qu'ils avaient opté pour une méthode itérative : des petits changements, de l'essai-erreur et des ajustements basés sur leurs observations et leur performance.
-
 > De trouver le plus de valeur ajouter pour le moins d'effort possible, c'est le secret.
 >
 > -- <cite>Nicolas Legros, Équipe Leebly</cite>
 
+Les membres de l'équipe Leebly ont d'ailleurs beaucoup renchéri sur la valeur de travailler en courtes itérations : c'est une leçon qu'ils disent avoir appris de leur expérience passée avec Blitz. Lors des éditions précédentes, ils auraient probablement commencé par essayer d'implémenter une stratégie d'attaque où l'on envoie les membres sur la "meilleure" tourelle d'attaque pour attaquer les ennemis. Cette année, ils ont commencé par implémenter une stratégie bien plus élémentaire, qui était d'envoyer les membres sur n'importe quelle tour libre disponible, et ils ont peu à peu raffiné leur implémentation, réparé leurs bogues, expérimenter en regardant des parties contre les autres équipes. Ce n'est que plus tard dans la journée, alors qu'ils étaient déjà en bonne position dans le classement, qu'ils se sont attaqués à la question du choix de tourelle optimale. Or, leurs essais n'ont pas donné de meilleurs résultats que leur stratégie en cours : lors de la finale, c'était donc toujours leur stratégie plus simple sans priorisation qui leur a permis de gagner. Les plus petites itérations leur a permis de plus rapidement en arriver à une solution fonctionnelle, gagner de l'information sur leur performance, et même incidemment trouver une meilleure solution à moins effort.
+
+Selon mon expérience, plus les itérations sont simples et courtes, plus les bogues sont faciles à trouver, et plus on peut avoir un feedback rapide. Un autre exemple de simplicité mentionné par Leebly est leur choix de stratégie défensive de dernier recours. Ils m'ont expliqué que lorsque leur niveau de vie était très bas, ils avaient optés pour envoyer tous les membres d'équipages manier une station de bouclier, leur raisonnement étant qu'en aussi situation critique, le champ de météores aurait raison d'eux, mais peut-être aussi de leurs adversaires. Le seuil utilisé pour déterminer le déclencheur de cette solution d'urgence lui a toutefois été déterminé avec beaucoup d'essai erreur.
+
+## La stratégie finale
+
+Lorsque j'ai commencé cet article, j'avais pour thème "les stratégies de Coveo Blitz 2024". Je pourrais donc conclure en vous parlant de mon _bot_ et des actions que j'ai choisies de prioriser, soit des scans de radar périodiques, une utilisation du bouclier en cas de dommage critiques, une tourelle dédiée à éliminer les plus gros débris et une offensive constante. Or, je crois qu'il serait un peu caduque de s'en tenir à la stratégie que j'ai employée ainsi - cela vaut bien pour le jeu de cette année, mais qu'en est-il des prochaines éditions ? Je préfère de loin la réponse spontanée qu'a fournie Leebly lorsqu'on leur a demandé, lors de leur victoire, comment ils y sont arrivés : ils ont été itératifs.
+
+Ainsi, pour mieux résumer la stratégie que j'essaie de mettre en œuvre chaque année, ce serait probablement de suivre ces principes :
+
+- Prendre le temps de comprendre le problème qui nous est présenté
+- Implémenter de petits incréments simples
+- Tester les changements, comprendre et analyser les bogues
+- Aller chercher le plus de rétroaction possible, le plus souvent possible afin de décider de la prochaine étape
+
+C'est là la simple description d'une méthode itérative : car oui, ici, ça vaut autant pour Blitz que pour n'importe quelle tâche qu'on rencontre en développement logiciel. Car oui, cela vaut pour tout : devant toute situation, vous êtes doté d'une créativité infinie, mais votre temps est limité, sachez en faire bon usage !
 
 _Merci à Sébastien Caron, Nicolas Legros et Sébastien Legros, de l'équipe Leebly de s'être entretenu avec moi. à Andy Emond et Jessie Emond de m'avoir parlé de leurs stratégies. Enfin, merci à JEAN UN, JEAN DEUX et JEAN TROIS pour avoir révisé cet article._
-
-TODO MAB: Conclure - est-ce qu'on parle toujours de Blitz ?****
